--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "bare-server",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "echo 'No build needed'"
+    "start": "node server.js"
   },
   "dependencies": {
-    "bare-server-node": "npm:@tomphttp/bare-server-node@latest"
+    "@tomphttp/bare-server-node": "^2.2.4"
   },
   "engines": {
     "node": "18"
